# data-point

./: .flake8  .gitignore  README.md  TODO.md  alembic.ini  docker-compose.yml  entrypoint.sh  env-exampl  pyproject.toml
docker/: Dockerfile
src/: manage.py
src/apps/api/: __init__.py  app.py
src/apps/api/metadata/model/: __init__.py  metadata.py  product.py
src/apps/api/metadata/repositories/: metadata.py
src/apps/api/metadata/schemas/: metadata.py
src/apps/api/metadata/v1/: routes.py
src/apps/api/storage/: __init__.py
src/apps/api/storage/model/: __init__.py  metadata.py  owner.py  product.py  source.py  storage.py
src/apps/api/storage/repositories/: __init__.py  metadata.py  owner.py  product.py  storage.py
src/apps/api/storage/schemas/: __init__.py  metadata.py  owner.py  storage.py
src/apps/api/storage/v1/: routes.py
src/apps/api/storage/v1/owner/: routes.py
src/apps/api/storage/v1/storage/: routes.py
src/apps/api/test/: __init__.py
src/apps/api/test/model/: test.py
src/apps/api/test/repositories/: __init__.py  test.py
src/apps/api/test/schemas/: test.py
src/apps/api/test/v1/: routes.py
src/apps/services/adaptors/base/: _base.py
src/apps/services/adaptors/google/: __init__.py  config.py  connection.py  schemas.py
src/cli/: app.py
src/config/: settings.py
src/db/: __init__.py  database.py  models.py
src/db/common/: _mixin.py  _repository.py
src/db/migration/: env.py
src/db/migration/versions/: 2737bc430538_.py  46f0b8f1ec7a_.py  6b64e47f655d_.py  a92f7c4b4d1d_.py  d738d80cda57_.py
src/db/orm/: __init__.py  _base.py  database.py
