[tool.poetry]
name = "data-point"
version = "0.1.0"
description = ""
authors = ["Noat"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.103.2"
click = "8.1.7"
uvicorn = "0.23.2"
sqlalchemy = {extras = ["asyncio"], version = "2.0.21"}
pydantic-settings = "2.0.3"
alembic = "1.12.0"
asyncpg = "0.28.0"
flake8 = "6.1.0"
jinja2 = "3.1.2"

[tool.poetry.scripts]
app = "src.cli.app:app_start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
